--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,3 +79,14 @@ a {
 		margin-right: auto;
 	}
 }
+
+@media (max-width: 480px) {
+  .Toastify__toast-container--bottom-right {
+    padding: 0 16px 16px 16px !important;
+    width: 100% !important;
+  }
+
+  .Toastify__toast {
+    margin-bottom: 8px;
+  }
+}
